<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Trekarta</string>
    <string name="title_select_format">Select format</string>
    <string name="title_export_track">Track export</string>
    <string name="title_map_import">Map import</string>
    <string name="title_map_removal">Removing map</string>
    <string name="title_input_name">Name</string>
    <string name="titleCoordinatesInput">Enter coordinates</string>
    <string name="titleLocationPermissionRationale">Trekarta needs location permission</string>
    <string name="titleNotificationPermissionRationale">Trekarta needs notification permission</string>
    <string name="whatsNewTitle">What\'s New</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="degrees">Degrees</string>
    <string name="coordinate_utmups">UTM/UPS</string>
    <string name="coordinate_mgrs">MGRS</string>
    <string name="declination">Declination</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="unknown">Unknown</string>
    <string name="description">Description</string>
    <string name="places">Places</string>
    <string name="tracks">Tracks</string>
    <string name="routes">Routes</string>
    <string name="explain">Explain</string>
    <string name="copyright">Copyright</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="credits">Credits</string>
    <string name="failed">failed</string>
    <string name="complete">compete</string>
    <string name="processed">%d%% processed</string>
    <string name="any">Any</string>
    <string name="baseMapTitle">World map</string>
    <string name="downloadBasemap">Download world map (%s)</string>
    <string name="downloadUpdatedBasemap">Download updated world map (%s)</string>
    <string name="downloadHillshades">Download concomitant hillshades</string>
    <string name="iamin">Yes, I\'m in</string>
    <string name="nameOrCoordinates">Name or coordinates</string>
    <string name="satellitesStub" translatable="false">0/0</string>
    <string name="map">Map</string>
    <string name="actionSave">Save</string>
    <string name="actionStop">Stop</string>
    <string name="actionPause">Pause</string>
    <string name="actionCustomize">Customize</string>
    <string name="actionAdd">Add</string>
    <string name="actionInsert">Insert</string>
    <string name="actionRemove">Remove</string>
    <string name="actionUndo">Undo</string>
    <string name="actionDismiss">Dismiss</string>
    <string name="actionDelete">Delete</string>
    <string name="action3dBuildings">3D buildings</string>
    <string name="actionGrid" tools:ignore="Typos">Tile grid</string>
    <string name="actionStopNavigation">Stop navigation</string>
    <string name="actionAbout">About</string>
    <string name="actionGotIt">Got it</string>
    <string name="actionEdit">Edit</string>
    <string name="actionShare">Share</string>
    <string name="actionView">View</string>
    <string name="actionContinue">Continue</string>
    <string name="actionNightMode">Night mode</string>
    <string name="actionLanguage">Language</string>
    <string name="actionManageMaps">Manage maps</string>
    <string name="actionAddPlaceHere">Add place</string>
    <string name="actionNavigateHere">Navigate here</string>
    <string name="actionNavigateReversed">Navigate reversed</string>
    <string name="actionFindRouteHere">Find route here</string>
    <string name="actionRememberScale">Remember zoom</string>
    <string name="actionOverviewRoute">Overview route</string>
    <string name="actionNextRoutePoint">Next route point</string>
    <string name="actionPrevRoutePoint">Previous route point</string>
    <string name="actionAutoTilt">Tilt on track up</string>
    <string name="actionRememberTilt">Remember tilt</string>
    <string name="actionHideSystemUI">Fullscreen</string>
    <string name="actionResetAdvices">Reset advices</string>
    <string name="actionResetMap">Reset map state</string>
    <string name="actionPurgeMaps">Purge native maps</string>
    <string name="actionAddGauge">Add gauge</string>
    <string name="actionContours">Contours</string>
    <string name="actionOtherFeatures">Features</string>
    <string name="actionSearch">Search</string>
    <string name="actionShareCoordinates">Share coordinates</string>
    <string name="actionStyle">Kind</string>
    <string name="actionActivity">Activity</string>
    <string name="actionSettings">Settings</string>
    <string name="actionAmenityZooms">Amenities</string>
    <string name="actionFontSize">Font size</string>
    <string name="actionRate">Say thanks</string>
    <string name="actionHillshades">Hillshades</string>
    <string name="actionRuler">Ruler</string>
    <string name="actionLegend">Legend</string>
    <string name="actionMapScale">Map scale</string>
    <string name="actionImport">Import</string>
    <string name="actionGrant">Grant</string>
    <string name="actionDownload">Download</string>
    <string name="actionSkip">Skip</string>
    <string name="actionCreateRoute">Create route</string>
    <string name="actionSend">Send</string>
    <string name="share_location_intent_title">Share location via:</string>
    <string name="share_data_intent_title">Share data to:</string>
    <string name="share_map_intent_title">Share map file to:</string>
    <string name="notifLocating">Acquiring position</string>
    <string name="notifTracking">Recording track</string>
    <string name="notifTrackingFailure">Track writing error</string>
    <string name="notifLocationWaiting">Waiting for location</string>
    <string name="msgNavigationProgress">%1$s left, proceed on a course of %2$s</string>
    <string name="msgNavigating">Navigating to %s</string>
    <string name="msgNavigatingPoint">route point</string>
    <string name="msgNavigationActions">You can stop navigation completely or pause it until next application start</string>
    <string name="msgBackQuit">Press Back once more to quit</string>
    <string name="msgPlaceDeleted">Place deleted</string>
    <string name="msgPlaceSaved">Place saved</string>
    <string name="msgEmptyPlaceList">Your places will appear here. You can create place by entering its coordinates or by long pressing Places button.</string>
    <string name="msgEmptyDataSource">Data source is empty or does not contain any supported data</string>
    <string name="msgLocating">Trekarta is following your movement to support ongoing action</string>
    <string name="msgTrackDeleted">Track deleted</string>
    <string name="msgTracked">%1$s tracked since %2$s</string>
    <string name="msgTracking">Trekarta is recording your movement</string>
    <string name="msgTrackingActions">You can stop recording to save the track or pause it to resume on next application start</string>
    <string name="msgTrackSaved">Track saved</string>
    <string name="msgTrackNotSavedPeriod">Track was not saved: too short period of time</string>
    <string name="msgTrackNotSavedDistance">Track was not saved: too small distance passed</string>
    <string name="msgEmptyTrackList">Your recorded tracks will appear here.</string>
    <string name="msgEmptyTrack">Track has no points</string>
    <string name="msgNoFileDataSources">You can also import GPX and KML files.</string>
    <string name="msgDataImported">File is saved in application folder.</string>
    <string name="msgSaveFailed">Failed to save: %s</string>
    <string name="msgAccessFineLocationRationale">Trekarta needs to %s to be able to show your position on map in real time and record track of your movement on your request</string>
    <string name="msgReadExternalStorageRationale">Trekarta needs to %s to be able to access the file you want to open</string>
    <string name="msgShowNotificationRationale">Trekarta needs to %s to be able to write track or navigate in background, otherwise it will be stopped on exit</string>
    <string name="msgLocationPermissionError">You should grant Trekarta location permission to be able to see your real time position on map</string>
    <string name="msgFailedToGetFileName">Failed to get file name</string>
    <string name="msgCancelDownload">Cancel map download?</string>
    <string name="msgCrashOccurred">It looks like application has crashed during last run. You will greatly help by sending crash report to the developer.</string>
    <string name="msgDescribeCrash">Please describe what you were doing when it happened:</string>
    <string name="msgIndexDownloadFailed">Download size not available</string>
    <string name="msgEstimateDownloadSize">Estimating download size</string>
    <string name="msgEstimateDownloadSizePlaceholder" translatable="false">%1$s (%2$d%%)</string>
    <string name="msgDownloadSize">Download size: %s</string>
    <string name="msgAdvicesReset">Advices will be shown from the very beginning</string>
    <string name="msgMapReset">Map state will be reset after application restart, which will be performed now</string>
    <string name="msgPurgeMaps">All downloaded maps will be removed as if application is run for the first time, requiring application restart, which will be performed now</string>
    <string name="msgParseCoordinatesFailed">Failed to get coordinates from string</string>
    <string name="msgParseMultipleCoordinatesFailed">Failed to get some of coordinates</string>
    <string name="msgEmptyMapList">Your installed custom tile maps will appear here.</string>
    <string name="msgDeleteSourcePermanently">Data source will be permanently deleted from storage. This action can not be undone.</string>
    <string name="msgCannotDeleteNativeSource">Native data sources can not be deleted</string>
    <string name="msgDeleteFailed">Failed to delete data source</string>
    <string name="msgMapDeleteFailed">Failed to delete map file</string>
    <string name="version">Version: %s</string>
    <string name="about">Trekarta is designed for hiking, geocaching, off-roading, cycling, boating and all other outdoor activities. It uses offline maps so you do not need to have internet connection. You can easily import places and tracks from GPX and KML data formats or create places in application and share them to others. It lets you write the track of your journey, even in background, so you will never get lost and be able later see where you\'ve been.</string>
    <string name="utc_offset">UTC Offset</string>
    <string name="pref_general">General</string>
    <string name="pref_zoom_buttons_visible_title">Visible zoom buttons</string>
    <string name="pref_units">Units</string>
    <string name="pref_unit_speed_title">Speed</string>
    <string name="pref_unit_distance_title">Distance</string>
    <string name="pref_unit_elevation_title">Elevation</string>
    <string name="pref_unit_angle_title">Angle</string>
    <string name="pref_unit_precision_title">Extra precision</string>
    <string name="pref_hillshades_transparency">Hillshades transparency</string>
    <string name="pref_show_titles_title">Show titles</string>
    <string name="pref_accessibility_badges_title">Accessibility badges</string>
    <string name="pref_confirm_exit_title">Exit confirmation</string>
    <string name="pref_default_color_title">Default color</string>
    <string name="pref_line_width_title">Line width</string>
    <string name="pref_active_route_color_title">Active route color</string>
    <string name="pref_active_line_width_title">Active line width</string>
    <string name="pref_pointer_type_title">Pointer type</string>
    <string name="pref_pointer_size_title">Pointer size</string>
    <string name="pref_pointer_color_title">Pointer color</string>
</resources>