<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionAbout"
        android:title="@string/actionAbout" />
    <item
        android:id="@+id/actionRate"
        android:title="@string/actionRate" />
    <item
        android:id="@+id/actionSettings"
        android:title="@string/actionSettings" />
    <item
        android:id="@+id/actionHideSystemUI"
        android:checkable="true"
        android:title="@string/actionHideSystemUI" />
    <item
        android:id="@+id/actionImport"
        android:title="@string/actionImport" />
    <item
        android:id="@+id/actionManageMaps"
        android:title="@string/actionManageMaps" />
    <item
        android:id="@+id/actionManageBackground"
        android:title="@string/actionManageBackground" />
    <item
        android:id="@+id/actionBackgroundSettings"
        android:title="@string/actionBackgroundSettings"/>
    <item
        android:id="@+id/actionAddGauge"
        android:title="@string/actionAddGauge" />
    <item
        android:id="@+id/actionRuler"
        android:title="@string/actionRuler" />
    <item
        android:id="@+id/actionActivity"
        android:actionLayout="@layout/menu_item_action"
        android:title="@string/actionActivity" />
    <item
        android:id="@+id/actionSearch"
        android:title="@string/actionSearch" />
</menu>