<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionAutoTilt"
        android:checkable="true"
        android:title="@string/actionAutoTilt" />
    <item
        android:id="@+id/actionFontSize"
        android:actionLayout="@layout/menu_item_action"
        android:title="@string/actionFontSize" />
    <item
        android:id="@+id/actionNightMode"
        android:actionLayout="@layout/menu_item_action"
        android:title="@string/actionNightMode" />
    <item
        android:id="@+id/actionLanguage"
        android:actionLayout="@layout/menu_item_action"
        android:title="@string/actionLanguage" />
    <item
        android:id="@+id/actionStyle"
        android:actionLayout="@layout/menu_item_action"
        android:title="@string/actionStyle" />
    <item
        android:id="@+id/actionAmenityZooms"
        android:title="@string/actionAmenityZooms" />
    <item
        android:id="@+id/actionOtherFeatures"
        android:title="@string/actionOtherFeatures" />
    <item
        android:id="@+id/actionActivity"
        android:actionLayout="@layout/menu_item_action"
        android:title="@string/actionActivity" />
</menu>