<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionShareCoordinates"
        android:icon="@drawable/ic_share"
        android:title="@string/actionShareCoordinates" />
    <item
        android:id="@+id/actionAddPlaceHere"
        android:icon="@drawable/ic_place"
        android:title="@string/actionAddPlaceHere" />
    <item
        android:id="@+id/actionNavigateHere"
        android:icon="@drawable/ic_navigate"
        android:title="@string/actionNavigateHere" />
    <item
        android:id="@+id/actionFindRouteHere"
        android:icon="@drawable/ic_route"
        android:title="@string/actionFindRouteHere" />
    <item
        android:id="@+id/actionRememberScale"
        android:title="@string/actionRememberScale" />
    <item
        android:id="@+id/actionRememberTilt"
        android:title="@string/actionRememberTilt" />
</menu>