<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:fragment="mobi.maptrek.fragments.preferences.General"
        android:key="preferences_general"
        android:title="@string/pref_general"
        app:iconSpaceReserved="false" />
    <Preference
        android:fragment="mobi.maptrek.fragments.preferences.Units"
        android:key="preferences_units"
        android:title="@string/pref_units"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />
    <Preference
        android:fragment="mobi.maptrek.fragments.About"
        android:key="preferences_about"
        android:title="@string/actionAbout"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false" />
    <Preference
        android:key="preferences_rate"
        android:title="@string/actionRate"
        app:iconSpaceReserved="false" />
</PreferenceScreen>