<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <mobi.maptrek.ui.FormattedSeekBarPreference
        android:defaultValue="50"
        android:key="hillshades_transparency"
        android:max="70"
        android:title="@string/pref_hillshades_transparency"
        app:format="%d%%"
        app:iconSpaceReserved="false"
        app:min="30"
        app:seekBarIncrement="10"
        app:showSeekBarValue="true" />
    <CheckBoxPreference
        android:defaultValue="@bool/def_zoom_buttons_visible"
        android:key="zoom_buttons_visible"
        android:title="@string/pref_zoom_buttons_visible_title"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="@bool/def_accessibility_badges"
        android:key="accessibility_badges"
        android:title="@string/pref_accessibility_badges_title"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="@bool/def_confirm_exit"
        android:key="confirm_exit"
        android:title="@string/pref_confirm_exit_title"
        app:iconSpaceReserved="false" />
</PreferenceScreen>