<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="@integer/default_pointer_type"
        android:dialogTitle="@string/pref_pointer_type_title"
        android:entries="@array/pointer_types"
        android:entryValues="@array/pointer_type_values"
        android:key="pointer_type"
        android:title="@string/pref_pointer_type_title"
        app:iconSpaceReserved="false" />
    <SeekBarPreference
        android:defaultValue="@integer/default_pointer_size"
        android:key="pointer_size"
        android:max="40"
        android:title="@string/pref_pointer_size_title"
        app:iconSpaceReserved="false"
        app:min="10"
        app:seekBarIncrement="5"
        app:showSeekBarValue="false" />
    <info.andreynovikov.androidcolorpicker.ColorPreference
        android:defaultValue="@color/trackColor"
        android:entryValues="@array/preferenceColors"
        android:key="pointer_color"
        android:title="@string/pref_pointer_color_title"
        app:iconSpaceReserved="false" />
</PreferenceScreen>