<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/panelSolidBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:drawableTop="@mipmap/splash_icon"
            android:gravity="center"
            android:paddingBottom="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/version" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/about" />

        <TextView
            android:id="@+id/links"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="5sp" />

        <TextView
            android:id="@+id/license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>